--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 <nav class="nav">
 <a href=\"{{ \"/\" \| relative_url }}\">Home</a>
 <a href=\"{{ \"/features/\" \| relative_url }}\">Features</a>
+<a href="{{ "/ai/" | relative_url }}">AI Capabilities</a>
 <a href=\"{{ \"/proposal/\" \| relative_url }}\">Partner Proposal</a>
 <a href=\"{{ \"/playbook/\" \| relative_url }}\">Implementation Playbook</a>
 <a href=\"{{ \"/contact/\" \| relative_url }}\">Contact</a>
